fix(styles): update code background color in dark mode

--- a/src/styles/markdown-github.css
+++ b/src/styles/markdown-github.css
@@ -1141,7 +1141,7 @@
   background-color: #0d1117;
 }
 .markdown-body.dark code {
-  background-color: rgba(240, 246, 252, 0.15);
+  background-color: #1f1f22;
 }
 .markdown-body.dark .highlight pre,
 .markdown-body.dark pre {
